substrate/primitives/runtime-interface/tests/ui/no_generic_parameters_trait.stderr
error: Generic parameters not supported.
  --> tests/ui/no_generic_parameters_trait.rs:21:12
   |
21 | trait Test<T> {
   |            ^
